<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="br.com.sigga.blog.viewmodels.fragments.CommentViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fafafa"
        android:clickable="true"
        android:focusable="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/view_header"
            style="@style/internal_action_toolbar_container"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:elevation="4dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            >

            <ImageButton
                android:id="@+id/image_button_close"
                style="@style/internal_action_button_close"
                android:layout_height="match_parent"
                android:scaleType="centerInside"
                android:contentDescription="@string/app_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                style="@style/internal_action_toolbar_title"
                android:layout_width="wrap_content"
                android:layout_marginEnd="0dp"
                android:text="@string/comments"
                app:layout_constraintLeft_toRightOf="parent"
                app:layout_constraintRight_toLeftOf="parent"
                tools:ignore="MissingConstraints" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/card_view_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp"
            app:layout_constraintTop_toBottomOf="@+id/view_header">

            <TextView
                style="@style/details_title"
                android:text="@string/post_name_text" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/details_data"
                android:text="@{viewModel.name}" />

            <TextView
                style="@style/details_title.middle"
                android:text="@string/post_details_text" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/details_data"
                android:text="@{viewModel.body}" />
        </LinearLayout>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipe_comments"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_view_info">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_comments"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:paddingTop="@dimen/list_padding"
                android:paddingBottom="@dimen/list_padding" />

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>