<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="br.com.sigga.blog.viewmodels.activities.MainViewModel" />
    </data>

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:openDrawer="start">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".activities.MainActivity">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/app_bar_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/AppTheme.AppBarOverlay">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@color/colorPrimary"
                    app:popupTheme="@style/AppTheme.PopupOverlay">

                    <ImageView
                        android:id="@+id/image_logo"
                        android:layout_width="@dimen/main_menu_logo_width"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_toolbar" />

                </androidx.appcompat.widget.Toolbar>

            </com.google.android.material.appbar.AppBarLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

                <FrameLayout
                    android:id="@+id/container"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/nav_view"
            android:layout_width="@dimen/main_menu_width"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="@color/colorPrimary"
            android:fitsSystemWindows="true"
            app:elevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/view_album_menu"
                    style="@style/main_menu_item_container">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/main_menu_button_image_height"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_action_camera_alt" />

                    <TextView
                        style="@style/main_menu_item_text"
                        android:text="@string/main_menu_album" />

                </LinearLayout>

                <View style="@style/main_menu_item_divider" />

                <LinearLayout
                    android:id="@+id/view_exit_menu"
                    style="@style/main_menu_item_container">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/main_menu_button_image_height"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_logout" />

                    <TextView
                        style="@style/main_menu_item_text"
                        android:text="@string/main_menu_logout" />
                </LinearLayout>

                <View style="@style/main_menu_item_divider" />
            </LinearLayout>

        </com.google.android.material.navigation.NavigationView>


    </androidx.drawerlayout.widget.DrawerLayout>
</layout>
